--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
     height: 100vh;
     width: 100vw;
-  background-image: url("./doggy.jpg");
+  background-image: url("./doggy1.jpg");
   background-size: cover;
   background-position: centre;
   display: flex;
