--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   color: #fff;
 }
+
 body {
     height: 100vh;
     width: 100vw;
@@ -11,7 +12,7 @@ body {
   background-size: cover;
   background-position: centre;
   display: flex;
-
+    overflow: hidden;
 
 
 }
