--- a/tea cup/style.css
+++ b/tea cup/style.css
@@ -11,16 +11,22 @@ body{
     background: #607d8b;
 }
 .container{
+    height: 70vmin;
+    width: 70vmin;
     position: relative;
-    top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .cup{
     position: relative;
-    width: 280px;
-    height: 300px;
+    bottom: -10%;
+    width: 70%;
+    height: 70%;
     background: linear-gradient(to right,#f9f9f9,#d9d9d9);
     border-bottom-left-radius: 45%;
     border-bottom-right-radius: 45%;
+
 }
 .top{
     position: absolute;
@@ -52,27 +58,28 @@ body{
 }
 .handle{
     position: absolute;
-    right: -70px;
-    top: 40px;
-    width: 160px;
-    height: 180px;
-    border: 25px solid #dcdcdc;
+    right: -50px;
+    top: 20px;
+    width: 30vmin;
+    height: 30vmin;
+    border: 25px solid #d9d9d9;
     border-bottom: 25px solid transparent;
     border-left: 25px solid transparent;
     border-radius: 50%;
     transform: rotate(42deg);
-
+    z-index: -9;
 }
 .plate{
     position: absolute;
     bottom: -50px;
     left: 50%;
     transform: translateX(-50%);
-    width: 500px;
-    height: 200px;
+    width: 120%;
+    height: 60%;
     background: linear-gradient(to right,#f9f9f9,#d9d9d9);
     border-radius: 50%;
     box-shadow: 0 35px 35px rgba(0,0,0,.2);
+    z-index: -10;
 }
 .plate::after{
     content: '';
@@ -95,7 +102,7 @@ body{
     bottom: 50px;
     display: block;
     margin: 0 2px 50px;
-    min-width: 8px;
+    min-width: 1vmin;
     height: 120px;
     background: #fff;
     border-radius: 50%;
